samples/_failures_safe/1761492276_0d0375_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f345406c.c: In function ‘main’:
./samples/SAFE/__tmp_f345406c.c:157:5: error: expected expression at end of input
  157 |     graph_add_edge(&g, a, b,
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_f345406c.c:157:5: error: expected declaration or statement at end of input
